--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -76,8 +76,8 @@
         <h1>PuppyMoney 隱私政策</h1>
         
         <div class="meta-info">
-            <strong>生效日期</strong>: 2024年12月<br>
-            <strong>最後更新</strong>: 2024年12月
+            <strong>生效日期</strong>: 2025年6月<br>
+            <strong>最後更新</strong>: 2025年6月
         </div>
 
         <h2>概述</h2>
@@ -162,6 +162,7 @@
         <h2>聯繫我們</h2>
         <p>如果您對本隱私政策有任何疑問或建議，請通過以下方式聯繫我們：</p>
         <ul>
+            <li>電子郵件：<a href="mailto:tfuturewealth@gmail.com">tfuturewealth@gmail.com</a></li>
             <li>應用內反饋功能</li>
             <li>App Store 評論區</li>
         </ul>
@@ -171,7 +172,7 @@
         </div>
 
         <div class="footer">
-            <p>© 2024 PuppyMoney. All rights reserved.</p>
+            <p>© 2025 PuppyMoney. All rights reserved.</p>
         </div>
     </div>
 </body>
