--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -193,6 +193,7 @@
         <h2>聯繫信息</h2>
         <p>如果您對本使用條款有任何疑問，請通過以下方式聯繫我們：</p>
         <ul>
+            <li>電子郵件：<a href="mailto:tfuturewealth@gmail.com">tfuturewealth@gmail.com</a></li>
             <li>App Store 評論區</li>
         </ul>
 
@@ -201,7 +202,7 @@
         </div>
 
         <div class="footer">
-            <p>© 2024 PuppyMoney. All rights reserved.</p>
+            <p>© 2025 PuppyMoney. All rights reserved.</p>
         </div>
     </div>
 </body>
